--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
   <body>
     <section class="conteudo-principal">
-      <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+      <h2 class="titulo-principal">minhas metas<span>_</span></h2>
       <div class="botoes">
-        <button class="botao">Cursos na Alura</button>
-        <button class="botao">Criar projetos em Javascript</button>
-        <button class="botao">Criar um portfolio</button>
-        <button class="botao">Atualizar meu currículo</button>
+        <button class="botao">janeiro</button>
+        <button class="botao">fevereiro</button>
+        <button class="botao">março</button>
+        <button class="botao">abril</button>
       </div>
     </section>
   </body>
