--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </div>
     </section>
   </body>
-</html><button class="botao ativo">Cursos na Alura</button>
-<button class="botao">Criar projetos em Javascript</button>
-<button class="botao">Criar um portfolio</button>
-<button class="botao">Atualizar meu currículo</button><script src="main.js"></script>
+</html><button class="botao ativo">me dedicar mais</button>
+<button class="botao">trabalhar</button>
+<button class="botao">focar na academia</button>
+<button class="botao">tirar notas boas</button><script src="main.js"></script>
 for (let i = 0; i < botoes.length; i++) {
     console.log(i);
   }const botoes = document.querySelectorAll(".botao");
