--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <section class="conteudo-principal">
-      <h2 class="titulo-principal">minhas metas<span>_</span></h2>
+      <h2 class="titulo-principal">minhas metas 2025<span>_</span></h2>
       <div class="botoes">
         <button class="botao">janeiro</button>
         <button class="botao">fevereiro</button>
